# CaptchaGenerator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-FA.md  README.md  SECURITY.md  TelegramBotVersion.py  __init__.py  license.txt  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: package.yml  publish-pypi.yml  tests.yml
CaptchaGenerator/: CaptchaGenerator.py  __init__.py  __main__.py  base.py  exceptions.py
CaptchaGenerator/Colors/: colors.py  colors.txt
CaptchaGenerator/core/: __init__.py  colors.py  config.py  constants.py  drawing.py  noise.py  renderer.py  result.py  visual.py
CaptchaGenerator/generators/: __init__.py  analog_clock.py  animated.py  audio.py  click_point.py  color_challenge.py  custom_question.py  image_direction.py  image_grid.py  image_random.py  irregular_puzzle.py  logic.py  math_captcha.py  math_image.py  maze.py  missing_character.py  odd_one_out.py  pattern_completion.py  perspective_3d.py  rotate_image.py  sequence.py  shape_count.py  slider_puzzle.py  text.py  text_random.py  upside_down.py  word.py
Examples/: TelegramBotVersionAudio.py  TelegramBotVersionIDM.py  TelegramBotVersionMath.py  TelegramBotVersionRandomImage.py  TelegramBotVersionRandomWord.py
Examples/CaptchaExamples/: INDEX.md  INTERACTIVE.md  README.md  _shared.py  run_all.py
Examples/CaptchaExamples/AnalogClockCaptcha/: interactive.py  simple.py
Examples/assets/: words.txt
tests/: test_challenges.py  test_generators.py  test_new_generators.py
(+51 files in other folders)
